[package]
name = "find_drand48_innosetup_pw"
version = "0.1.0"
authors = ["Dennis Duda <git@seri.tools>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
sha-1 = "0.8.1"
hex-literal = "0.2"
float_extras = "0.1.6"
rayon = "1.1"